# AT82.08-CV-A1

./: README.md  main.py  pyproject.toml
src/: app.py  main.py
src/assets/: calibration.npz  model_loader.py
src/mode_handlers/: __init__.py  ar.py  base.py  blur_sharpen.py  camera_calibration.py  color_channels.py  contrast_brightness.py  corner.py  edges.py  hough.py  modes.py  morph.py  sift.py  trackers.py  transformation.py  translate_rotate_scale.py
