[project]
name = "at82-08-cv-a1"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "ipykernel>=6.30.1",
    "matplotlib>=3.10.6",
    "numpy>=2.3.3",
    "opencv-contrib-python>=4.11.0.86",
    "opencv-python>=4.11.0.86",
]
